# flowgym

./: .gitignore  .gitlint  .pre-commit-config.yaml  README.md  index.md  pyproject.toml  pytest.ini
.agent/rules/: rules.md
.claude/: CLAUDE.md
.github/: copilot-instructions.md
.github/agents/: implementer.agent.md  reviewer.agent.md
.github/prompts/: api-validation.prompt.md  bugfix.prompt.md  docs.prompt.md  feature.prompt.md  orientation.prompt.md  refactor.prompt.md
.github/workflows/: code-style.yaml  commit-lint.yaml  test.yaml
agents/: implementer.md  reviewer.md
docs/: index.md
docs/agents/: implementer.md  reviewer.md
docs/guides/: agent-development.md  architecture.md  contributing.md
docs/standards/: code-clarity.md  code-organization.md  device-utilization.md  linting-formatting.md  ml-numerical.md  testing.md  typing-docstrings.md
docs/workflows/: api-validation.md  bugfix.md  docs.md  feature.md  orientation.md  refactor.md
examples/: 10_caching.py  11_caching.py
experiments/piv-admm/: experiment1.py
experiments/piv-admm/baselines/: baselines.py  val_dataset.yaml
experiments/piv-admm/baselines/algorithms/: DIS1.yaml  DIS2.yaml  DeepFlow.yaml  Farneback0.yaml  Farneback1.yaml  Farneback2.yaml
experiments/piv-admm/experiment3_1/: base_model.yaml  experiment3_1.py  run_dis_comparison.py  temp_farneback_list_l1_0.3.yaml
experiments/piv-admm/experiment3_2/: base_model.yaml  dataset.yaml  experiment3_2.py  temp_huber_closed_form_huber_none_0.7.yaml
experiments/piv-admm/experiment3_3/: base_model.yaml  experiment3_3.py  temp_list_l1_0.3.yaml
experiments/piv-admm/experiment3_4/: base_model.yaml  experiment3_4.py  temp_noreg_False_0.1.yaml
experiments/piv-admm/experiment3_5/: base_model.yaml  dataset.yaml  experiment3_5.py  temp_dis_huber__adaptive_local_default.yaml
experiments/piv-admm/training_oracle/: base_model.yaml  dataset.yaml  temp_dataset_no_cache.yaml  temp_dataset_no_cache_imgpair_0_gpu_1_pid_2766128.yaml  temp_dataset_no_cache_imgpair_0_gpu_1_pid_2774251.yaml  temp_dataset_no_cache_imgpair_0_gpu_1_pid_2775536.yaml  temp_dataset_no_cache_imgpair_0_gpu_1_pid_2778023.yaml  temp_dataset_no_cache_imgpair_0_gpu_1_pid_3792479.yaml  temp_dataset_no_cache_imgpair_0_gpu_2_pid_3932341.yaml  temp_model_oracle_threshold_0_1.yaml  temp_model_oracle_threshold_0_1_imgpair_0_gpu_1_pid_2778023.yaml  temp_model_oracle_threshold_0_1_imgpair_0_gpu_1_pid_3792479.yaml  temp_model_oracle_threshold_1_0_imgpair_0_gpu_2_pid_3921890.yaml  temp_model_oracle_threshold_1_0_imgpair_0_gpu_2_pid_3932341.yaml  temp_val_dataset_no_cache_imgpair_0_gpu_2_pid_3932341.yaml  training_oracle.py  val_dataset.yaml
src/: compare.py  eval.py  main.py  train.py  train_supervised.py
src/flow_gym.egg-info/: PKG-INFO  SOURCES.txt
src/flow_gym_suite.egg-info/: PKG-INFO  SOURCES.txt
src/flowgym/: __init__.py  make.py  types.py  utils.py
src/flowgym/common/: evaluation.py  filters.py  median.py  preprocess.py
src/flowgym/common/base/: __init__.py  estimator.py  trainable_state.py  trainable_states.py
src/flowgym/config/: JHTDB.yaml  JHTDB_eval.yaml  cylinder.yaml  density.yaml  piv_dataset_class1_eval.yaml  piv_dataset_class1_eval_original.yaml  piv_dataset_class1_train.yaml  piv_dataset_class1_train_original.yaml  testing.yaml
src/flowgym/config/estimators/density/: nn.yaml  simple.yaml
src/flowgym/density/: nn.py  simple.py
src/flowgym/environment/: fluid_env.py
src/flowgym/flow/: base.py  deepflow.py  dummy.py  farneback.py  hornschunck.py  process.py  utils.py
src/flowgym/flow/consensus/: admm.py  consensus.py  consensus_algorithms.py  objectives.py  regularizers.py  solvers.py  types.py
src/flowgym/flow/dis/: __init__.py  dis.py  dis_jax.py  process.py
src/flowgym/flow/open_piv/: __init__.py  openpiv.py  openpiv_jax.py  process.py
src/flowgym/flow/postprocess/: __init__.py  data_interpolation.py  data_smoothing.py  data_validation.py  oracle_model.py  oracle_threshold.py
src/flowgym/flow/raft/: __init__.py  process.py  raft_jax.py  raft_piv_pytorch.py
src/flowgym/nn/: blocks.py  cnn.py  mlp.py  raft_model.py  registry.py
src/flowgym/nn/raft_torch_nn/: __init__.py  corr_block.py  flowNetsRAFT.py  submodules_RAFT_GRU.py  submodules_RAFT_extractor.py
src/flowgym/training/: CACHING_SYSTEM.md  __init__.py  caching.py  exploration.py  losses.py  optimizer.py  replay.py  schedules.py  target_transforms.py  utils.py
tests/: conftest.py  test_data_interpolation.py  test_data_smoothing.py  test_data_validation.py  test_density_estimate_simple.py  test_dis_jax.py  test_dis_jax_learned_oracle.py  test_estimation_stats.py  test_filters.py  test_flow_estimate_base.py  test_flow_estimate_dis.py  test_median.py  test_openpiv_jax.py  test_oracle_threshold_estimator.py  test_postprocess_config.py  test_postprocess_debugging.py  test_preprocess.py  test_preprocess_config.py  test_trainable_state.py  test_training_utils.py
tests/base_estimator/: test_base.py  test_base_cache.py  test_base_call.py  test_base_estimator.py
tests/caching/: test_buffered_writes.py  test_cache_key_generation.py  test_caching.py  test_caching_rules.py  test_eval_integration.py  test_eval_integration_v2.py  test_generic_caching.py  test_integration.py  test_raft_integration.py
tests/caching/flow/: test_dis_cache.py  test_estimator_cache.py  test_raft_cache.py
tests/consensus/: test_admm.py  test_consensus.py  test_consensus_outlier_mask.py  test_objectives.py  test_regularizers.py  test_updates.py
tests/nn/: test_block_builders.py  test_cnn_builders.py  test_mlp_builders.py  test_raft_model.py  test_registry.py
tests/training/: test_checkpointing.py  test_full_integration.py  test_integrated_checkpointing.py  test_partial_checkpointing.py  test_rl_replay.py  test_sampler_checkpointing.py  test_supervised_replay.py  test_target_transforms.py  test_train_replay_integration.py  test_train_supervised_replay_integration.py  test_trainable_state.py  test_trainable_state_integration.py
(+30 files in other folders)
