[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flow-gym-suite"
version = "0.1.0"
description = "Flow Gym is a toolkit for research and deployment in flow quantification inspired by OpenAI Gym and Stable-Baselines3."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Antonio Terpin", email = "aterpin@ethz.ch" },
    { name = "Francesco Banelli", email = "fbanelli@ethz.ch" },
    { name = "Alan Bonomi", email = "abonomi@ethz.ch" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.10"

# Core dependencies
#"robo-goggles @ git+https://github.com/antonioterpin/goggles.git@dev",
dependencies = [
    "jax>=0.6.0",
    "flax>=0.10.5",
    "ipywidgets",
    "pip>=25.3",
]

[project.urls]
Homepage = "https://github.com/antonioterpin/flowgym"
Repository = "https://github.com/antonioterpin/flowgym"
Documentation = "https://github.com/antonioterpin/flowgym#readme"
Issues = "https://github.com/antonioterpin/flowgym/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["flowgym*"]
exclude = ["tests*", "docs*"]

# Dependency groups
[dependency-groups]
dev = [
    "synthpix @ git+https://github.com/antonioterpin/synthpix.git@4adea08",
    "pre-commit==4.0.1",
    "snowballstemmer",
    "pytest==7.4.4",
    "wandb>=0.16,<1.0",
    "scikit-image>=0.20.0",
    "h5py>=3.10.0", # synthpix integration tests
    "numpy>=1.20.0",
    "basedpyright",
    "pydoclint>=0.8.3",
    "pyarrow>=23.0.0",
    "ruff>=0.14.14",
    "pytest-cov>=7.0.0",
]

synthpix-cuda12 = [
    "synthpix[cuda12] @ git+https://github.com/antonioterpin/synthpix.git@4adea08",
]

dev-cuda12 = [
    {include-group = "dev"},
    {include-group = "synthpix-cuda12"},
]

docs = [
    "Sphinx==7.4.7",
    "sphinx-copybutton==0.5.2",
    "sphinx-rtd-theme==2.0.0",
    "sphinx-tabs==3.4.7",
    "sphinx-togglebutton==0.3.2",
    "sphinxcontrib-applehelp==2.0.0",
    "sphinxcontrib-bibtex==2.6.2",
    "sphinxcontrib-devhelp==2.0.0",
    "sphinxcontrib-htmlhelp==2.1.0",
    "sphinxcontrib-jquery==4.1",
    "sphinxcontrib-jsmath==1.0.1",
    "sphinxcontrib-qthelp==2.0.0",
    "sphinxcontrib-serializinghtml==2.0.0",
]

# Optional dependencies
[project.optional-dependencies]
other_methods = [
    "pyoptflow",
    "openpiv",
    "opencv-contrib-python-headless",
    "torch>=1.13.1",
    "torchvision>=0.14.1",
]

#wandb = [
#   "robo-goggles[wandb] @ git+https://github.com/antonioterpin/goggles.git@dev",
#]

cuda12 = [
    "jax[cuda12]>=0.6.0",
]

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
        "-ra",
        "--strict-markers",
        "--strict-config",
        "--cov=flowgym",
        "--cov-branch",
        "--cov-report=term-missing",
        "--cov-report=html",
        "--cov-report=xml",
]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
        "run_explicitly: marks tests that are only run with -m run_explicitly",
        "slow: marks tests as slow (deselect with '-m \"not slow\"')",
        "speed: marks performance tests (deselect with '-m \"not speed\"')",
]
filterwarnings = [
        "error",
        "ignore::UserWarning",
        "ignore::DeprecationWarning",
]

# Ruff configuration for linting and modern typing enforcement
[tool.ruff]
line-length = 80
target-version = "py310"
extend-exclude = [
    "src/flowgym/nn/raft_torch_nn/",
    "src/flowgym/flow/raft/raft_piv_pytorch.py",
]

[tool.ruff.lint]
# Enable comprehensive rule sets
select = [
    "E",     # pycodestyle errors (style/formatting)
    "W",     # pycodestyle warnings
    "F",     # pyflakes (logical errors)
    "UP",    # pyupgrade (modern Python syntax)
    "I",     # isort (import sorting)
    "N",     # pep8-naming (naming conventions)
    "B",     # flake8-bugbear (potential bugs)
    "PL",    # pylint (code quality)
    "RUF",   # ruff-specific rules
]

# Temporary complexity-rule relaxation tracked in umbrella issue #142.
# Re-enable these checks once all linked refactor issues are closed.
ignore = [
    "PLR0912", # Too many branches
    "PLR0915", # Too many statements
    "PLR2004", # Magic value used in comparison
    "PLR0913", # Too many arguments in function definition
    "N803",    # Argument name should be lowercase (CV standard Ix, Iy, ecc.)
    "N806",    # Variable in function should be lowercase (CV standard Ix, Iy, ecc.)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLC0415"]  # Allow local imports in tests

# Pydoclint configuration
# Pydoclint is used together with Ruff because
# Ruff hasn't yet implemented all the checks that Pydoclint provides.
# The plan is to migrate to Ruff only when all checks are implemented.
[tool.pydoclint]
style = "google"
# Skip tests and heavy legacy modules for now.
exclude = '\.git|\.tox|^tests/|^src/flowgym/nn/raft_torch_nn/|^src/flowgym/flow/raft/raft_piv_pytorch\.py$'
skip-checking-short-docstrings = false
allow-init-docstring = true
arg-type-hints-in-docstring = false
check-return-types = false
skip-checking-raises = false

# Pyright configuration for type checking
# We use basedpyright but in this way pylance also
# reads this configuration
[tool.pyright]
typeCheckingMode = "basic"
pythonVersion = "3.10"
include = ["src", "tests", "examples"]
exclude = [
    "tests",
    "src/flowgym/nn/raft_torch_nn",
    "src/flowgym/flow/raft/raft_piv_pytorch.py",
]

reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false

reportUnusedImport = false
reportUnusedVariable = false

enableTypeIgnoreComments = false
reportIgnoreCommentWithoutRule = "error"
reportUnnecessaryTypeIgnoreComment = "error"
